--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+### jasypt
+jasypt.encryptor.bean=jasyptStringEncryptor
+jasypt.encryptor.password=myhomeProjectKey
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+jasypt.encryptor.property.prefix=ENC[
+jasypt.encryptor.property.suffix=]
 
+### mongo db
+spring.data.mongodb.database=log_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=192.168.0.254
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=ENC[ZLHNLRiZf3yV4/k9PIKIEA==]
+spring.data.mongodb.password=ENC[/20p0SPm3ivBKeqRhj317B+bPL0937w4]
+
+### kafka
+spring.kafka.bootstrap-servers=192.168.0.254:9092
+spring.kafka.consumer.group-id=spring-group
+spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
+
+### Spring Boot
+server.port=8081
