--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.data.mongodb.password=ENC[/20p0SPm3ivBKeqRhj317B+bPL0937w4]
 spring.kafka.bootstrap-servers=192.168.0.254:9092
 spring.kafka.consumer.group-id=spring-group
 spring.kafka.consumer.auto-offset-reset=earliest
-#spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 
